# breakid

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  breakidConfig.cmake.in  cmake-license.txt  flake.nix
.github/workflows/: build.yml  main.yml
cmake/: breakidConfig-buildtree.cmake.in  cmake_uninstall.cmake.in
scripts/: build_debug.sh  build_emscripten.sh  build_norm.sh  build_notest.sh  build_release.sh  build_static.sh  clear_build.sh  rem_dup_cls.py
src/: Algebraic.cpp  Algebraic.hpp  BreakID.cpp  Breaking.cpp  Breaking.hpp  CMakeLists.txt  GitSHA1.cpp.in  GitSHA1.h  Graph.cpp  Graph.hpp  Makefile  Theory.cpp  Theory.hpp  breakid-main.cpp  breakid.cpp  breakid.h  breakid.hpp  breakid_c.cpp  breakid_c.h  cms_windows_includes.h  config.hpp  constants.h  global.cpp  global.hpp  main.cpp  saucy.c  solvertypesmini.hpp.in  test.cpp  time_mem.h
src/bliss/: CMakeLists.txt  bignum.hh  bliss.cc  bliss_C.cc  bliss_C.h  defs.cc  defs.hh  graph.cc  graph.hh  heap.cc  heap.hh  kqueue.hh  kstack.hh  orbit.cc  orbit.hh  partition.cc  partition.hh  timer.cc  timer.hh  uintseqhash.cc  uintseqhash.hh  utils.cc  utils.hh
src/bliss-0.73/: Makefile
src/bliss-0.73/src/: bliss.cc  bliss_C.cc  bliss_C.h  graph.cc  heap.cc  orbit.cc  partition.cc  uintseqhash.cc  utils.cc
